[gd_scene load_steps=12 format=3 uid="uid://dy1a3ag5gdkam"]

[ext_resource type="PackedScene" uid="uid://dp7fxb1kkrl7r" path="res://opps/opps_dallas.tscn" id="1_tprkt"]
[ext_resource type="Texture2D" uid="uid://ls4i3os8dq3o" path="res://opps/minibossdallas.png" id="2_7b7cj"]
[ext_resource type="Script" path="res://opps/minibosses_dallas.gd" id="2_37vji"]
[ext_resource type="Script" path="res://components/timed_state_component.gd" id="3_xdi0v"]
[ext_resource type="Script" path="res://components/move_component.gd" id="4_0jpm0"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="5_wry74"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="8_kfj5k"]
[ext_resource type="PackedScene" uid="uid://y7j4rs1c3mq5" path="res://opps/minibossbullet.tscn" id="9_muoci"]

[sub_resource type="SpriteFrames" id="SpriteFrames_j5trp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7b7cj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aog4w"]
radius = 35.0
height = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yuawi"]
radius = 31.0644

[node name="MinibossesDallas" instance=ExtResource("1_tprkt")]
script = ExtResource("2_37vji")

[node name="AnimatedSprite2D" parent="." index="0"]
position = Vector2(-1, -41)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_j5trp")

[node name="StatsComponent" parent="." index="1"]
health = 10

[node name="VisibleOnScreenNotifier2D" parent="." index="3"]
position = Vector2(5.96046e-08, -3)
scale = Vector2(6.45, 3.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -3)
shape = SubResource("CapsuleShape2D_aog4w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_yuawi")

[node name="ScoreComponent" parent="." index="7"]
adjust_amount = 5

[node name="States" type="Node" parent="." index="8"]

[node name="MoveDownState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("3_xdi0v")
duration = 5.0

[node name="MoveComponent" type="Node" parent="States/MoveDownState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("4_0jpm0")
actor = NodePath("../../..")
velocity = Vector2(0, 40)

[node name="MoveSideState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("3_xdi0v")
duration = 7.0

[node name="MoveSideComponent" type="Node" parent="States/MoveSideState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("4_0jpm0")
actor = NodePath("../../..")
velocity = Vector2(40, 2.08165e-12)

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("5_wry74")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="PauseState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("3_xdi0v")
duration = 2.0

[node name="Muzzle" type="Marker2D" parent="." index="9"]
position = Vector2(0, 33)

[node name="FireRateTimer" type="Timer" parent="." index="10"]
wait_time = 1.2
autostart = true

[node name="BulletSpawner" type="Node2D" parent="." index="11"]
script = ExtResource("8_kfj5k")
scene = ExtResource("9_muoci")
